[metadata]
name = zict
# Must be kept aligned with zict.__init__
version = 2.2.0
maintainer=Matthew Rocklin
maintainer_email=mrocklin@coiled.io
license = BSD
description = Mutable mapping tools
description_content_type=text/plain
long_description =
    Mutable Mapping tools. See `documentation`_.

    .. _documentation: http://zict.readthedocs.io/en/latest/

long_description_content_type=text/x-rst
keywords = mutable mapping,dict,dask
url = http://zict.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = zict
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    heapdict

[options.package_data]
zict =
    py.typed

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Aligned with black https://github.com/psf/black/blob/main/.flake8
extend-ignore = E203, E266, E501
# Note: there cannot be spaces after commas here
exclude = __init__.py
ignore =
    E4,         # Import formatting
    E731,       # Assigning lambda expression
    W503,       # line break before binary operator

max-line-length = 88

[tool:pytest]
addopts = -v --doctest-modules

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = zict
