[metadata]
name = zict
# Must be kept aligned with zict.__init__
version = 3.1.0
maintainer=Matthew Rocklin
maintainer_email=mrocklin@coiled.io
license = BSD
description = Mutable mapping tools
description_content_type=text/plain
long_description =
    Mutable Mapping tools. See `documentation`_.

    .. _documentation: http://zict.readthedocs.io/en/latest/

long_description_content_type=text/x-rst
keywords = mutable mapping,dict,dask
url = http://zict.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = zict
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.9
install_requires =

[options.package_data]
zict =
    py.typed

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Aligned with black https://github.com/psf/black/blob/main/.flake8
extend-ignore = E203, E266, E501
# Note: there cannot be spaces after commas here
exclude = __init__.py
ignore =
    # Import formatting
    E4
    # Assigning lambda expression
    E731
    # line break before binary operator
    W503

max-line-length = 88

[tool:pytest]
addopts =
    -v
    --doctest-modules
    --durations=20
    --strict-markers
    --strict-config
    -p no:legacypath

# pytest-timeout settings
# 'thread' kills off the whole test suite. 'signal' only kills the offending test.
# However, 'signal' doesn't work on Windows (due to lack of SIGALRM).
timeout_method = thread
timeout = 180
markers =
    stress: slow-running stress test with a random component. Pass --stress <n> to change number of reruns.


[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = zict


[mypy]
python_version = 3.9
# See https://github.com/python/mypy/issues/12286 for automatic multi-platform support
platform = linux
# platform = win32
# platform = darwin
allow_incomplete_defs = false
allow_untyped_decorators = false
allow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[mypy-zict.tests.*]
allow_untyped_defs = true
